--- a/public/html/write.html
+++ b/public/html/write.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
+  <link href="/css/output.css" rel="stylesheet">
+  <title>Write the next masterpiece</title>
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline bg-blue-900">
+  <h1 class="text-3xl font-bold underline bg-blue-500">
     Hello world!
   </h1>
 </body>
