--- a/public/html/write.html
+++ b/public/html/write.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/css/output.css" rel="stylesheet">
+  <link href="./output.css" rel="stylesheet">
   <title>Write the next masterpiece</title>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline bg-blue-500">
-    Hello world!
-  </h1>
+<body class="grid justify-center">
+
+  <div class="grid pt-10 max-w-4xl justify-center max-h-screen"> 
+    <h1 class="font-bold text-4xl mb-16 ">Untitled</h1> 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas eaque eos dolores nobis quasi mollitia, reprehenderit facere ipsa tenetur molestiae assumenda id amet dicta voluptate perferendis aliquid iste dolorum corporis!</p>
+    <h2 class="font-bold text-2xl mt-8 mb-5">Heading</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ex ducimus, porro nostrum quo ipsum consequuntur placeat blanditiis. A, maiores quae? Expedita tempore quibusdam iste corrupti quae, est vero ut?</p>
+  </div>
 </body>
 </html>
+
+<!-- this is the basic layout will modify later, like adding image and stuff dw -->
