--- a/public/write.html
+++ b/public/write.html
@@ -9,9 +9,31 @@
   <link href="./output.css" rel="stylesheet">
   <title>Write the next masterpiece</title>
 </head>
+<body class="bg-gray-200 dark:bg-black">
+  
+  <div class="bg-white max-w-4xl min-w-screen h-screen m-auto md:drop-shadow-md dark:bg-slate-900 dark:text-white">
+    <div class="grid place-content-center m-4 ">
+     <input class="mt-4 text-3xl max-w-screen placeholder:text-slate-400 text-center bg-transparent placeholder:italic" placeholder="Chapter Title..." type="text">
+    </div>
+
+    <div class="mx-auto pt-5 text-xl overflow-hidden max-w-screen-md  pl-1 pr-1" id="editorjs"></div>
+
+  </div>
+
+
+
+
+  <script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
+  <script defer src="js/write.js"></script>
+</body>
+</html>
+
+
+
+<!-- 
 <body class="grid grid-cols-12 justify-center font-sans max-w-full">
 
-  <input class="col-start-4 ml-5 col-end-10   pt-10 text-4xl mb-10 font-bold placeholder:text-slate-400 " placeholder="Untitled" type="text"></input> 
+  <input class="col-start-4 ml-5 col-end-10 pt-10 text-4xl mb-10 font-bold placeholder:text-slate-400 " placeholder="Untitled" type="text"></input> 
   
   <div class="col-start-4 col-end-10 max-w-4xl overflow-hidden">
     <div class="pt-2 max-h-screen">
@@ -22,5 +44,4 @@
   <script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
   <script defer src="js/write.js"></script>
 </body>
-</html>
-
+ -->
