--- a/public/write.html
+++ b/public/write.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-200 dark:bg-black">
   
-  <div class="bg-white max-w-4xl min-w-screen h-screen m-auto md:drop-shadow-md dark:bg-slate-900 dark:text-white">
+  <div class="bg-white max-w-4xl min-w-screen h-screen m-auto md:drop-shadow-md dark:bg-slate-900 dark:text-white p-2 md:p-0">
     <div class="grid place-content-center m-4 ">
      <input class="mt-4 text-3xl max-w-screen placeholder:text-slate-400 text-center bg-transparent placeholder:italic" placeholder="Chapter Title..." type="text">
     </div>
