--- a/html/write.html
+++ b/html/write.html
@@ -23,10 +23,10 @@
 
   <div class="bg-gray-50 max-w-4xl min-w-screen max-h-fit m-auto md:drop-shadow-md dark:bg-gray-800 dark:text-white p-2 md:p-0">
     <div class="grid place-content-center m-4 ">
-     <input maxlength = "30" class="mt-4 text-3xl max-w-screen placeholder:text-slate-400 text-center bg-transparent placeholder:italic" placeholder="Chapter Title..." type="text">
+     <input maxlength = "25" class="mt-4 text-3xl max-w-fit max-h-fit placeholder:text-slate-400 text-center bg-transparent placeholder:italic" placeholder="Chapter Title..." type="text">
     </div>
 
-    <div class="mx-auto pt-5 text-xl overflow-hidden max-w-screen-md  pl-1 pr-1" id="editorjs"></div>
+    <div class="mx-auto pt-5 text-xl overflow-hidden max-w-screen  pl-1 pr-1" id="editorjs"></div>
   </div>
   <div class="grid gap-4 items-center mt-4 justify-center">
     <button id="btnSaveDraft" class="rounded-full bg-blue-500 px-2 py-1 mx-auto text-gray-200 text-xl hover:bg-blue-600 font-bold">Save Changes</button>
