--- a/html/form.html
+++ b/html/form.html
@@ -12,7 +12,7 @@
     <title>Sign Up</title>
 </head>
 <body class="" >
-    <div class="bg-gray-200 h-screen flex items-center justify-center ">
+    <div class="bg-white h-screen flex items-center justify-center ">
         <div class="flex bg-white rounded-lg shadow-lg overflow-hidden  max-w-sm lg:max-w-4xl flex-auto shadow-cyan-500 ">
               <div class="hidden lg:block lg:w-1/2 bg-cover" style="background-image:url('https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanimeukiyo.com%2Fwp-content%2Fuploads%2F2020%2F12%2Fplot.jpg&f=1&nofb=1')"></div>
               <div class="w-full p-8 lg:w-1/2">
