--- a/html/signup.html
+++ b/html/signup.html
@@ -12,8 +12,8 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <div class="bg-gray-200 h-screen">
-        <div class="flex bg-white rounded-lg shadow-lg overflow-hidden mx-auto max-w-fit lg:max-w-4xl ">
+    <div class="bg-white-200 h-screen flex items-center justify-center">
+        <div class="flex bg-white rounded-lg shadow-lg overflow-hidden max-w-fit lg:max-w-4xl flex-auto shadow-blue-500 ">
               <div class="w-full p-8 ">
                   <h2 class="text-2xl font-semibold text-gray-700 text-center">YUME</h2>
                   <p class="text-xl text-gray-600 text-center">Begin Your Journey!!!</p>
