sign in and sign up with sweetalert

--- a/html/signup.html
+++ b/html/signup.html
@@ -66,7 +66,7 @@
       </div>
   
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/"></script> -->
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script defer src="js/signup.js" type="module"></script>
 </body>
 </html>
