--- a/html/form.html
+++ b/html/form.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     <link href="/css/output.css" rel="stylesheet">
-    <title>Sign Up</title>
+    <title>Sign In</title>
 </head>
 <body class="" >
     <div class="bg-white h-screen flex items-center justify-center ">
@@ -36,17 +36,17 @@
                   </div>
                   <div class="mt-4">
                       <label class="block text-gray-700 text-sm font-bold mb-2">Email Address</label>
-                      <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="email">
+                      <input id="email" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="email">
                   </div>
                   <div class="mt-4">
                       <div class="flex justify-between">
                           <label class="block text-gray-700 text-sm font-bold mb-2">Password</label>
                           <a href="#" class="text-xs text-gray-500">Forgot Password?</a>
                       </div>
-                      <input class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password">
+                      <input id="password" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password">
                   </div>
                   <div class="mt-8">
-                      <button class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Login</button>
+                      <button id="btnSignIn" class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Login</button>
                   </div>
                   <div class="mt-4 flex items-center justify-between">
                       <span class="border-b w-1/5 md:w-1/4 border-black"></span>
@@ -56,5 +56,8 @@
               </div>
           </div>
       </div>
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="js/signin.js" type="module"></script>
 </body>
 </html>
