--- a/html/signup.html
+++ b/html/signup.html
@@ -15,7 +15,7 @@
     <div class="bg-white-200 h-screen flex items-center justify-center">
         <div class="flex bg-white rounded-lg shadow-lg overflow-hidden max-w-fit lg:max-w-4xl flex-auto shadow-blue-500 ">
               <div class="w-full p-8 ">
-                  <h2 class="text-2xl font-semibold text-gray-700 text-center">YUME</h2>
+                  <h2 class="text-2xl font-semibold text-center bg-clip-text bg-gradient-to-r from-cyan-900 to-blue-500 text-transparent">YUME</h2>
                   <p class="text-xl text-gray-600 text-center">Begin Your Journey!!!</p>
                   <a href="#" class="flex items-center justify-center mt-4 text-white rounded-lg shadow-md hover:bg-gray-100">
                       <div class="px-4 py-3">
@@ -29,9 +29,9 @@
                       <h1 class="px-4 py-3 w-5/6 text-center text-gray-600 font-bold">Sign up with Google</h1>
                   </a>
                   <div class="mt-4 flex items-center justify-between">
-                      <span class="border-b w-1/5 lg:w-1/4"></span>
+                      <span class="border-b w-1/5 lg:w-1/4 border-black"></span>
                       <a href="#" class="text-xs text-center text-gray-500 uppercase">or make an account</a>
-                      <span class="border-b w-1/5 lg:w-1/4"></span>
+                      <span class="border-b w-1/5 lg:w-1/4 border-black"></span>
                   </div>
                   <div class="mt-4">
                       <label class="block text-gray-700 text-sm font-bold mb-2">Email Address</label>
@@ -57,9 +57,9 @@
                       <button id="btnSignUp" class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Create</button>
                   </div>
                   <div class="mt-4 flex items-center justify-between">
-                      <span class="border-b w-1/5 md:w-1/4"></span>
+                      <span class="border-b w-1/5 md:w-1/4 border-black"></span>
                       <a href="#" class="text-xs text-gray-500 uppercase">or sign in</a>
-                      <span class="border-b w-1/5 md:w-1/4"></span>
+                      <span class="border-b w-1/5 md:w-1/4 border-black"></span>
                   </div>
               </div>
           </div>
@@ -67,6 +67,7 @@
   
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <!-- <script defer src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/"></script> -->
+    
     <script defer src="js/signup.js" type="module"></script>
 </body>
 </html>
