--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,7 @@
 						<div>
 							<!-- Website Logo -->
 							<a href="#" class="flex items-center py-6 px-2">
-								<img src="logo.png" alt="Logo" class="h-8 w-8 mr-2">
+								<img src="images/logo.png" alt="Logo" class="h-8 w-8 mr-2">
 								<span class="font-semibold text-gray-500 text-lg">YUME</span>
 							</a>
 						</div>
@@ -33,7 +33,7 @@
 						</div>
 					<!-- Secondary Navbar items -->
 					<div class="hidden md:flex items-center space-x-3 ">
-						<a href="" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log In</a>
+						<a href="/signin" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log In</a>
 						<a href="/create" class="py-2 px-2 font-medium text-white bg-cyan-500 rounded hover:bg-cyan-400 transition duration-300">Sign Up</a>
 					</div>
 					<!-- Mobile menu button -->
