--- a/html/about.html
+++ b/html/about.html
@@ -10,9 +10,9 @@
     <link href="/css/output.css" rel="stylesheet">
     <title>About</title>
 </head>
-<body class="h-screen w-full">
+<body class="h-screen w-full dark:bg-black">
     <!-- Navbar goes here -->
-		<nav class="bg-white">
+		<nav class="bg-white max-h-36">
 			<div class="max-w-6xl mx-auto px-4">
 				<div class="flex justify-between">
 					<div class="flex space-x-7">
@@ -33,7 +33,7 @@
 						</div>
 					<!-- Secondary Navbar items -->
 					<div class="hidden md:flex items-center space-x-3 ">
-						<a href="" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log In</a>
+						<a href="/signin" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log In</a>
 						<a href="/create" class="py-2 px-2 font-medium text-white bg-cyan-500 rounded hover:bg-cyan-400 transition duration-300">Sign Up</a>
 					</div>
 					<!-- Mobile menu button -->
@@ -73,15 +73,28 @@
 			</script>
 		</nav>
 
-        <div class="md:m-10 grid grid-flow-col">
+        <div class="text-center p-1 md:m-10 grid md:grid-flow-col grid-flow-row">
             <div class="grid text-center md:text-left mt-6">
-                <div class="text-4xl text-gray-700"> Invent and then Reinvent</div>
-                <div style="font-size: 15rem;" class="bg-clip-text bg-gradient-to-l from-blue-600 to-cyan-600 text-transparent font-bold">YUME</div>
-                <div class="text-gray-500 text-xl font-bold">Made.In.India</div>
-                <div class="text-sm text-gray-500 font-light">A place where you can write your thoughts and then see it drawn...</div>
+                <div class="text-4xl text-gray-700"> Reinvent the <span class="bg-clip-text bg-gradient-to-l from-cyan-600 to-blue-600 text-transparent">Invented</span></div> 
+                <div style="font-size: 15rem;" class="animate-charcter font-bold ">YUME</div>
+                <div class="text-gray-500 text-xl font-bold">Made.In.India <br>
+					<span class="text-sm text-gray-500 font-light">A place where you can write your thoughts and then see it drawn...</span>
+				</div>
+				<button class="bg-cyan-500 hover:bg-cyan-400 w-1/3 mt-5 text-white font-bold py-2 px-4 border-b-4 border-cyan-700 hover:border-cyan-500 rounded">
+					Join Now!
+				  </button>
+				<div class="mt-10"> <p class="text-2xl font-bold">Recent Hits</p>
+					<div class="flex flex-row gap-5">
+						<div class="bg-black aspect-square w-6"></div>
+						<div class="bg-black aspect-square w-6"></div>
+						<div class="bg-black aspect-square w-6"></div>
+					</div>
+				</div>
             </div>
-			<img src="/images/main1.png" class="max-w-xl" alt="">
+			<img src="/images/main1.png" class="md:max-w-xl row-start-1 max-w-sm mx-auto pr-4" alt="">
         </div>
 
 </body>
 </html>
+
+<!-- bg-clip-text bg-gradient-to-l from-blue-600 to-cyan-600 text-transparent font-bold -->
