--- a/html/about.html
+++ b/html/about.html
@@ -80,9 +80,7 @@
                 <div class="text-gray-500 text-xl font-bold">Made.In.India <br>
 					<span class="text-sm text-gray-500 font-light">A place where you can write your thoughts and then see it drawn...</span>
 				</div>
-				<button class="bg-cyan-500 hover:bg-cyan-400 w-1/3 mt-5 text-white font-bold py-2 px-4 border-b-4 border-cyan-700 hover:border-cyan-500 rounded">
-					Join Now!
-				  </button>
+				<button type="button" class="w-1/3 mt-5 text-white bg-gradient-to-r from-cyan-400 via-cyan-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-lg shadow-cyan-500/50 dark:shadow-lg dark:shadow-cyan-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Join Now</button>
 				<div class="mt-10"> <p class="text-2xl font-bold">Recent Hits</p>
 					<div class="flex flex-row gap-5">
 						<div class="bg-black aspect-square w-6"></div>
