--- a/html/signup.html
+++ b/html/signup.html
@@ -59,7 +59,7 @@
                   </div>
                   <div class="mt-4 flex items-center justify-between">
                       <span class="border-b w-1/5 md:w-1/4 border-black"></span>
-                      <a href="#" class="text-xs text-gray-500 uppercase">or sign in</a>
+                      <a href="/signin" class="text-xs text-gray-500 uppercase">or sign in</a>
                       <span class="border-b w-1/5 md:w-1/4 border-black"></span>
                   </div>
               </div>
