--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
 					<!-- Secondary Navbar items -->
 					<div class="hidden md:flex items-center space-x-3 ">
 						<a href="/signin" class="py-2 px-2 font-medium text-gray-500 rounded hover:bg-cyan-500 hover:text-white transition duration-300">Log In</a>
-						<a href="/create" class="py-2 px-2 font-medium text-white bg-cyan-500 rounded hover:bg-cyan-400 transition duration-300">Sign Up</a>
+						<a href="/signup" class="py-2 px-2 font-medium text-white bg-cyan-500 rounded hover:bg-cyan-400 transition duration-300">Sign Up</a>
 					</div>
 					<!-- Mobile menu button -->
 					<div class="md:hidden flex items-center">
