--- a/html/form.html
+++ b/html/form.html
@@ -50,7 +50,7 @@
                   </div>
                   <div class="mt-4 flex items-center justify-between">
                       <span class="border-b w-1/5 md:w-1/4 border-black"></span>
-                      <a href="#" class="text-xs text-gray-500 uppercase">or sign up</a>
+                      <a href="/signup" class="text-xs text-gray-500 uppercase">or sign up</a>
                       <span class="border-b w-1/5 md:w-1/4 border-black"></span>
                   </div>
               </div>
