--- a/html/signup.html
+++ b/html/signup.html
@@ -34,29 +34,31 @@
                       <a href="#" class="text-xs text-center text-gray-500 uppercase">or make an account</a>
                       <span class="border-b w-1/5 lg:w-1/4 border-black"></span>
                   </div>
-                  <div class="mt-4">
-                      <label class="block text-gray-700 text-sm font-bold mb-2">Email Address</label>
-                      <input id="email" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="email">
-                  </div>
-                  <div class="mt-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">Username</label>
-                    <input id="username" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="text">
-                </div>
-                  <div class="mt-4">
-                      <div class="flex justify-between">
-                          <label class="block text-gray-700 text-sm font-bold mb-2">Password</label>
+                    <form class="mt-4">
+                        <div class="mt-4">
+                            <label class="block text-gray-700 text-sm font-bold mb-2">Email Address</label>
+                            <input required id="email" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="email">
+                        </div>
+                        <div class="mt-4">
+                          <label class="block text-gray-700 text-sm font-bold mb-2">Username</label>
+                          <input required id="username" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="text">
                       </div>
-                      <input id="password" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password">
-                  </div>
-                  <div class="mt-4">
-                    <div class="flex justify-between">
-                        <label class="block text-gray-700 text-sm font-bold mb-2">Confirm Password</label>
-                    </div>
-                    <input id="passwordConfirm" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password">
-                </div>
-                  <div class="mt-8">
-                      <button id="btnSignUp" class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Create</button>
-                  </div>
+                        <div class="mt-4">
+                            <div class="flex justify-between">
+                                <label class="block text-gray-700 text-sm font-bold mb-2">Password</label>
+                            </div>
+                            <input required id="password" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password">
+                        </div>
+                        <div class="mt-4">
+                          <div class="flex justify-between">
+                              <label class="block text-gray-700 text-sm font-bold mb-2">Confirm Password</label>
+                          </div>
+                          <input required id="passwordConfirm" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password">
+                      </div>
+                        <div class="mt-8">
+                            <button type="submit" id="btnSignUp" class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Create</button>
+                        </div>
+                    </form>
                   <div class="mt-4 flex items-center justify-between">
                       <span class="border-b w-1/5 md:w-1/4 border-black"></span>
                       <a href="/signin" class="text-xs text-gray-500 uppercase">or sign in</a>
