--- a/html/signin.html
+++ b/html/signin.html
@@ -34,6 +34,7 @@
                       <a href="#" class="text-xs text-center text-gray-500 uppercase">or login with email</a>
                       <span class="border-b w-1/5 lg:w-1/4 border-black"></span>
                   </div>
+                    <form class="mt-4">
                   <div class="mt-4">
                       <label class="block text-gray-700 text-sm font-bold mb-2">Email Address</label>
                       <input id="email" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="email">
@@ -46,8 +47,9 @@
                       <input id="password" class="bg-gray-200 text-gray-700 focus:outline-none focus:shadow-outline border border-gray-300 rounded py-2 px-4 block w-full appearance-none" type="password">
                   </div>
                   <div class="mt-8">
-                      <button id="btnSignIn" class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Login</button>
+                      <button type="submit" id="btnSignIn" class="bg-gray-700 text-white font-bold py-2 px-4 w-full rounded hover:bg-gray-600">Login</button>
                   </div>
+                  </form>
                   <div class="mt-4 flex items-center justify-between">
                       <span class="border-b w-1/5 md:w-1/4 border-black"></span>
                       <a href="/signup" class="text-xs text-gray-500 uppercase">or sign up</a>
