--- a/html/signup.html
+++ b/html/signup.html
@@ -31,7 +31,7 @@
                   </a>
                   <div class="mt-4 flex items-center justify-between">
                       <span class="border-b w-1/5 lg:w-1/4 border-black"></span>
-                      <a href="#" class="text-xs text-center text-gray-500 uppercase">or make an account</a>
+                      <a class="text-xs text-center text-gray-500 uppercase">or make an account</a>
                       <span class="border-b w-1/5 lg:w-1/4 border-black"></span>
                   </div>
                     <form class="mt-4">
