--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -598,7 +598,7 @@
                     <th class="px-4 py-3">Name</th>
                     <th class="px-4 py-3">Edit</th>
                     <th class="px-4 py-3">Status</th>
-                    <th class="px-4 py-3">Date</th>
+                    <th class="px-4 py-3">Last Updated</th>
                     <th class="px-4 py-3">Delete</th>
 
                   </tr>
