--- a/html/write.html
+++ b/html/write.html
@@ -41,7 +41,7 @@
   <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
-  <script defer src="js/write.js"></script>
+  <script defer src="/js/write.js"></script>
 </body>
 </html>
 
