--- a/html/reader.html
+++ b/html/reader.html
@@ -93,20 +93,28 @@
 			</ol>
 		</div>
 
-		<!--Tags -->
-		<div class="text-base md:text-sm text-gray-500 px-4 py-6">
+        <div class="flex flex-row  items-center gap-8">
+            <button class="mb-8 my-6 ml-4 bg-transparent hover:bg-pink-500 text-pink-700 font-semibold hover:text-white py-2 px-4 border border-pink-500 hover:border-transparent rounded">
+                <div class="flex flex-row text-center justify-center items-center gap-3">
+                    Like
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                    </svg>
+                </div>
+              </button>
+
+              <p>17,000 Likes</p>
+        </div>
+
+
+          		<!--Tags -->
+		<div class="text-base md:text-sm text-gray-500 px-4">
 			Genre: <a href="#" class="text-base md:text-sm text-cyan-500 no-underline hover:underline">Link</a> . <a href="#" class="text-base md:text-sm text-cyan-500 no-underline hover:underline">Link</a>
 		</div>
 
+
 		<!--Divider-->
 		<hr class="border-b-2 border-gray-400 mb-8 mx-4">
-
-
-		<!--Comment-->
-
-		<!-- /Comment-->
-
-
 
 		<!--Author-->
 		<div class="flex w-full items-center font-sans px-4 py-12">
