--- a/html/home.html
+++ b/html/home.html
@@ -89,7 +89,7 @@
 					</div>
 				</div>
             </div>
-			<img src="https://as2.ftcdn.net/v2/jpg/04/22/99/57/1000_F_422995777_QaU2tT9iX0ZN8awAGpbyOdPEibI1pBK5.jpg" class="md:max-w-xl row-start-1 max-w-sm mx-auto pr-4 my-auto" alt="">
+			<img src="https://as1.ftcdn.net/v2/jpg/02/22/52/66/1000_F_222526611_2QAHL2Sj4RW4hr6c7qBaU6RgRNaJW6rP.jpg" class="md:max-w-xl row-start-1 max-w-sm mx-auto pr-4 my-auto mt-8" alt="">
         </div>
 
 		<div class=" h-screen bg-black w-screen">
