--- a/html/series.html
+++ b/html/series.html
@@ -394,7 +394,7 @@
             </header>
             <main class="h-full overflow-y-auto">
                 <div class="container px-6 mx-auto grid">
-                    <h2 class="my-6 text-2xl font-semibold text-gray-700 dark:text-gray-200">
+                    <h2 class="my-4 text-2xl font-semibold text-gray-700 dark:text-gray-200">
                         Series
                     </h2>
                 </div>
@@ -412,7 +412,7 @@
                                 <img
                                 alt="Series Cover Illustration"
                                 src="${cover}"
-                                class="object-cover w-full -mt-3 h-96 transition-shadow ease-in-out duration-300 shadow-none hover:shadow-xl hover:shadow-green-500"
+                                class="object-cover w-full -mt-3 transition-shadow ease-in-out duration-300 shadow-none hover:shadow-xl hover:shadow-green-500"
                                 />
                         
                                 <p class="mt-1 text-lg text-black font-bold dark:text-white">
