--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -597,6 +597,7 @@
                     class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
                     <th class="px-4 py-3">Name</th>
                     <th class="px-4 py-3">Edit</th>
+                    <th class="px-4 py-3">Likes</th>
                     <th class="px-4 py-3">Status</th>
                     <th class="px-4 py-3">Last Updated</th>
                     <th class="px-4 py-3">Delete</th>
