--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -74,7 +74,7 @@
 		</div>
 
         <div class="flex flex-row  items-center gap-8">
-            <button class="mb-8 my-6 ml-4 bg-transparent hover:bg-pink-500 text-pink-700 font-semibold hover:text-white py-2 px-4 border border-pink-500 hover:border-transparent rounded">
+            <button onclick="likeChapter()" class="mb-8 my-6 ml-4 bg-transparent hover:bg-pink-500 text-pink-700 font-semibold hover:text-white py-2 px-4 border border-pink-500 hover:border-transparent rounded">
                 <div class="flex flex-row text-center justify-center items-center gap-3">
                     Like
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
