udated css problems

--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -119,11 +119,11 @@
 		<!--Next & Prev Links-->
 		<div class="font-sans flex justify-between content-center px-4 pb-12">
 			<div class="text-left">
-				<!-- <span class="text-xs md:text-sm font-normal text-gray-600">&lt; Previous Chapter</span><br> -->
+				<span class="text-xs md:text-sm font-bold text-gray-600"> Previous Chapter</span><br>
 				<p><a id="prevChap" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline"></a></p>
 			</div>
 			<div class="text-right">
-				<!-- <span class="text-xs md:text-sm font-normal text-gray-600">Next Chapter &gt;</span><br> -->
+				<span class="text-xs md:text-sm font-bold text-gray-600">Next Chapter </span><br>
 				<p><a id="nextChap" class="break-normal text-2xl md:text-sm text-green-500 font-bold no-underline hover:underline"></a></p>
 			</div>
 		</div>
