blur and css enhancements

--- a/html/about.html
+++ b/html/about.html
@@ -74,24 +74,30 @@
 			</script>
 		</nav>
 		<div class="relative">
-			<div class="grid grid-cols-4 w-full h-screen opacity-20 absolute z-10 gap-3">
-				<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
-				<div class="aspect-square"><img src="https://cdn.dribbble.com/users/792073/screenshots/15978161/media/6a13bbf12877a5c16dff0d63f64adc22.jpg?compress=1&resize=1200x900&vertical=top" alt=""></div>
-				<div class="aspect-square"><img src="https://cdn.dribbble.com/users/56226/screenshots/13763525/media/e64e67a9ff293f0f083091292805670b.jpg?compress=1&resize=1200x900&vertical=top" alt=""></div>
-				<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
-				<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
-				<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
-				<div class="aspect-square"><img src="https://cdn.dribbble.com/users/56226/screenshots/13763525/media/e64e67a9ff293f0f083091292805670b.jpg?compress=1&resize=1200x900&vertical=top" alt=""></div>
-				<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
+			<div class="hidden  absolute z-10  md:block my-auto mx-auto h-screen">
+				<div class="grid grid-cols-4 w-full gap-4 opacity-90 mt-2 blur-sm">
+					<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
+					<div class="aspect-square"><img src="https://cdn.dribbble.com/users/792073/screenshots/15978161/media/6a13bbf12877a5c16dff0d63f64adc22.jpg?compress=1&resize=1200x900&vertical=top" alt=""></div>
+					<div class="aspect-square"><img src="https://cdn.dribbble.com/users/56226/screenshots/13763525/media/e64e67a9ff293f0f083091292805670b.jpg?compress=1&resize=1200x900&vertical=top" alt=""></div>
+					<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
+					<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
+					<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
+					<div class="aspect-square"><img src="https://cdn.dribbble.com/users/56226/screenshots/13763525/media/e64e67a9ff293f0f083091292805670b.jpg?compress=1&resize=1200x900&vertical=top" alt=""></div>
+					<div class="aspect-square"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
+				</div>
 			</div>
-			<div class="text-center p-1 md:m-10 grid md:grid-flow-col grid-flow-row h-screen absolute z-20">
+
+			<div class="text-center p-1 md:m-10 grid md:grid-flow-col grid-flow-row max-h-full absolute z-20">
 				<div class="grid text-center mt-6">
-					<div class="text-4xl text-gray-700 "> Reinvent the <span class="bg-clip-text bg-gradient-to-l from-cyan-600 to-blue-600 text-transparent">Invented</span></div> 
+					<div class="text-4xl text-gray-900  font-pro "> Reinvent the <span class="bg-clip-text bg-gradient-to-l from-cyan-600 to-blue-600 text-transparent">Invented</span></div> 
 					<div class=""> <div style="font-size: 15rem;" class="animate-charcter font-bold opacity-100 font-pro ">YUME</div> </div>
-					<div class="text-gray-500 text-xl font-bold capitalize">There are no Limits to tell a Story...<br>
-						<span class="text-sm text-gray-500 font-light">A place where you can write your thoughts and then see it drawn...</span>
+					<div class="text-gray-900 text-2xl font-bold capitalize">There are no Limits to tell a Story...<br>
+						<span class="text-xl text-gray-900 font-light">A place where you can write your thoughts and then see it drawn...</span>
 					</div>
-					<button type="button" class="md:w-1/3 mt-5 mx-auto text-white bg-gradient-to-r from-blue-400 via-blue-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-md shadow-cyan-500/50 dark:shadow-md dark:shadow-cyan-800/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mb-2">Explore</button>
+					<div class="flex w-96 items-center justify-center mx-auto text-center">
+						<a type="" href="/signup"  class="md:w-1/3 mt-5 mx-auto text-white bg-gradient-to-r from-blue-400 via-blue-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-md shadow-cyan-500/50 dark:shadow-md dark:shadow-cyan-800/80 font-medium rounded-lg text-sm  py-2.5 text-center mb-2">Be a Creator</a>
+						<a type="" href="/signup" class="md:w-1/3 mt-5 mx-auto text-white bg-gradient-to-r from-blue-400 via-blue-500 to-cyan-600 hover:bg-gradient-to-br focus:ring-4 focus:ring-cyan-300 dark:focus:ring-cyan-800 shadow-md shadow-cyan-500/50 dark:shadow-md dark:shadow-cyan-800/80 font-medium rounded-lg text-sm  py-2.5 text-center mb-2">Reader</a>
+					</div>
 					<div class="mt-10"> <p class="text-2xl font-bold">Recent Hits</p>
 						<div class="grid grid-cols-2 mt-8 lg:grid-cols-7 gap-x-10 justify-center items-center">
 							<div class="aspect-square co col-start-3"><img src="https://cdn.dribbble.com/users/1231965/screenshots/14220684/media/8676b7d99743a48b04d66c6cd7dadbf0.jpg?compress=1&resize=800x600&vertical=top" alt=""></div>
