--- a/html/readNovel.html
+++ b/html/readNovel.html
@@ -127,6 +127,9 @@
 
 
 		<!--/Next & Prev Links-->
+		<button class="mx-auto bg-blue-500 hover:bg-blue-400 text-white font-bold py-2 px-4 border-b-4 border-blue-700 hover:border-blue-500 rounded">
+			Comments
+		  </button>
 
         <div class="flex mx-auto items-center justify-center shadow-lg mb-4 max-w-full">
             <form class="w-full max-w-full bg-white rounded-lg px-4 pt-2">
@@ -149,7 +152,7 @@
                </form>
             </div>
          </div>
-         <div class="antialiased mx-auto max-w-screen-full">
+		 <div class="antialiased mx-auto max-w-screen-full">
             <h3 class="mb-4 text-lg font-semibold text-gray-900">Comments</h3>
           
             <div id="commentsContainer" class="space-y-4">
