--- a/html/about.html
+++ b/html/about.html
@@ -174,7 +174,7 @@
 <script>
 	function show_hide() {  
          var click = document.getElementById("dropdownInformation");  
-         if(click.style.display ="block") {  
+         if(click.style.display ="none") {  
             click.style.display ="block";  
          } else {  
             click.style.display ="none"; 
